--- a/java/List-StudentMngSystem/.project
+++ b/java/List-StudentMngSystem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SetCollectionDemo</name>
+	<name>List-StudentMngSystem</name>
 	<comment></comment>
 	<projects>
 	</projects>
