--- a/java/Set-EmployeeMngSystem/.project
+++ b/java/Set-EmployeeMngSystem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OrderMngSystem</name>
+	<name>Set-EmployeeMngSystem</name>
 	<comment></comment>
 	<projects>
 	</projects>
